Squashed commit of the following:
commit 3c6ffd80caca10fb0f124c4dc19285b3afa4c7d7
Author: Kerry Washington <mrkerrywashington@icloud.com>
Date:   Mon Feb 17 21:07:21 2025 +0000

    version bump

commit c2bbb389196e38c1ac565dc9ea4c24ccd88648f3
Merge: 3dd269c 43f03ed
Author: Kerry Washington <mrkerrywashington@icloud.com>
Date:   Mon Feb 17 20:50:26 2025 +0000

    Merge pull request #18 from brainwallet-co/feat/new-intro_activity-issue-29

    [ 🚀] feature/new intro activity issue 29

commit 43f03ed55a90857c9b4b751ddd0bcae944c8d597
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Tue Feb 18 03:38:21 2025 +0700

    chore: optimize import for

commit 928d5ea4d5054044e6ba6af1ee27ce2adb23bc66
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Tue Feb 18 03:34:35 2025 +0700

    chore: optimize import for

commit 709c220681b027a4ebac62e71b3140fc7b30ae3e
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Tue Feb 18 03:29:25 2025 +0700

    chore: adjustment for Dialog

commit 84fac7fd11d9b24bdb132994d63beb007bdd8ff7
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Tue Feb 18 03:02:57 2025 +0700

    chore: update FragmentSend

commit 32d3d690c38e16cc12fd4544b70c816f3cdcd272
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Tue Feb 18 02:55:24 2025 +0700

    chore: comment language and dark mode switch at WelcomeScreen

commit e0d635c71c090c3c98a06238ed4a90c98bba221e
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Mon Feb 17 17:19:51 2025 +0700

    chore: remove unused code

commit d630d1f93ec37b27e32e221ed76f437617063876
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Mon Feb 17 17:07:21 2025 +0700

    fix: fix passcode verified flow

commit 6ed9a36a55fa0e1e8558242f32678a5f8c5bebcd
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Mon Feb 17 16:56:29 2025 +0700

    feat: wipe wallet with old flow

commit 602d701c33261104ef88ef9f8e531d0f28c492e1
Author: andhikayuana <andhikayuana@gmail.com>
Date:   Mon Feb 17 16:42:59 2025 +0700

  